// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should work for empty config 1`] = `
Object {
  "lines": Array [
    Object {
      "content": Array [
        "1",
        "2",
      ],
      "playerId": "name:a",
      "time": "time1",
      "title": "A",
    },
    Object {
      "content": Array [
        "3",
      ],
      "playerId": "name:b",
      "time": "time2",
      "title": "B",
    },
    Object {
      "content": Array [
        "4",
      ],
      "playerId": "name:a",
      "time": "time3",
      "title": "A",
    },
  ],
  "playerIds": Array [
    "name:a",
    "name:b",
  ],
}
`;

exports[`should work when some players have filled starting colors 1`] = `
Object {
  "lines": Array [
    Object {
      "content": Array [
        "1",
        "2",
      ],
      "playerId": "name:a",
      "time": "time1",
      "title": "A",
    },
    Object {
      "content": Array [
        "3",
      ],
      "playerId": "name:b",
      "time": "time2",
      "title": "B",
    },
  ],
  "playerIds": Array [
    "name:a",
    "name:b",
  ],
}
`;
